feat: add MaxConnections field to LimitationData and update related templates

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -190,6 +190,10 @@
               <span>{{.Limitation.MaxMessageLength}} chars</span>
             </div>
             <div class="limitation-item">
+              <label>Max Connections</label>
+              <span>{{.Limitation.MaxConnections}}</span>
+            </div>
+            <div class="limitation-item">
               <label>Max Subscriptions</label>
               <span>{{.Limitation.MaxSubscriptions}}</span>
             </div>
